# smart-shield-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: shield.yaml
config/filters/: apache-auth.yaml  nginx-auth.yaml  sshd.yaml
docs/: README.md  ai-analysis.md  faq.md  glossary.md  how-it-works.md  overview.md
packaging/systemd/: env.example  smart-shield.service
packaging/windows/: install-service-nssm.ps1  install-task-scheduler.ps1
shield/: __main__.py  ai_analyzer.py  ai_provider.py  banner.py  config.py  filters.py  jail.py  monitor.py  recidive.py  store.py
tests/: e2e_run.sh  test_ai_parser.py  test_ai_provider.py  test_apache_filter.py  test_filters.py  test_jail.py  test_recidive.py  test_store.py
